--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^9.0.0",
+    "mongoose": "^8.3.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
